--- a/build.gradle
+++ b/build.gradle
@@ -31,5 +31,11 @@ repositories {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-mongodb')
 	compile('org.springframework.boot:spring-boot-starter-web-services')
+	
+	// Google Sheets API
+	compile 'com.google.api-client:google-api-client:1.23.0'
+    compile 'com.google.oauth-client:google-oauth-client-jetty:1.23.0'
+    compile 'com.google.apis:google-api-services-sheets:v4-rev487-1.23.0'
+	
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
