Implemented interface for writing data to xls file

--- a/build.gradle
+++ b/build.gradle
@@ -27,9 +27,11 @@ repositories {
 	maven { url "https://repo.spring.io/milestone" }
 }
 
-
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-mongodb')
 	compile('org.springframework.boot:spring-boot-starter-web-services')
+	
+	compile 'org.apache.poi:poi-ooxml:3.17'
+	
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
