--- a/build.gradle
+++ b/build.gradle
@@ -31,5 +31,8 @@ repositories {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-mongodb')
 	compile('org.springframework.boot:spring-boot-starter-web-services')
+	compile('org.apache.commons:commons-csv:1.5')
+	compile('org.apache.poi:poi:3.17')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+	testCompile('org.assertj:assertj-core:3.6.1')
 }
